--- a/404.html
+++ b/404.html
@@ -3,12 +3,23 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Page Not Found</title>
+    <title>404 Not Found</title>
+    <style>
+        body { text-align: center; padding: 150px; }
+        h1 { font-size: 50px; }
+        body { font: 20px Helvetica, sans-serif; color: #333; }
+        article { display: block; text-align: left; width: 650px; margin: 0 auto; }
+        a { color: #dc8100; text-decoration: none; }
+        a:hover { color: #333; text-decoration: underline; }
+    </style>
 </head>
 <body>
-    <script>
-        // GitHub Pages'de çalışacak şekilde yönlendirme yapıyoruz
-        window.location.replace(window.location.pathname);
-    </script>
+    <article>
+        <h1>404 - Sayfa Bulunamadı</h1>
+        <div>
+            <p>Üzgünüm, aradığınız sayfa mevcut değil.</p>
+            <p><a href="/">Ana Sayfaya Dön</a></p>
+        </div>
+    </article>
 </body>
 </html>
