--- a/404.html
+++ b/404.html
@@ -19,6 +19,10 @@
         <div>
             <p>Üzgünüm, aradığınız sayfa mevcut değil.</p>
             <p><a href="/">Ana Sayfaya Dön</a></p>
+            <p><a href="/about">Ana Sayfaya Dön</a></p>
+            <p><a href="/services">Ana Sayfaya Dön</a></p>
+            <p><a href="/contact">Ana Sayfaya Dön</a></p>
+            
         </div>
     </article>
 </body>
